Update template notebook for cleaning script

--- a/Notebooks/Notebook template.ipynb
+++ b/Notebooks/Notebook template.ipynb
@@ -3,20 +3,21 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "84905c52",
+   "id": "e46a433f",
    "metadata": {},
    "outputs": [],
    "source": [
     "from pathlib import Path\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from import_clean_data import load_annotated_meter_data"
+    "from import_clean_data import load_annotated_meter_data\n",
+    "import warnings"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "c7b82b68",
+   "id": "e45c9002",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,33 +27,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "9dc5bb10",
+   "id": "84462e11",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/cmutel/miniconda3/envs/bw2dev38/lib/python3.8/site-packages/IPython/core/interactiveshell.py:3441: DtypeWarning: Columns (0,2,3,4,5) have mixed types.Specify dtype option on import or set low_memory=False.\n",
-      "  exec(code_obj, self.user_global_ns, self.user_ns)\n",
-      "/Users/cmutel/miniconda3/envs/bw2dev38/lib/python3.8/site-packages/IPython/core/interactiveshell.py:3441: DtypeWarning: Columns (2,3) have mixed types.Specify dtype option on import or set low_memory=False.\n",
-      "  exec(code_obj, self.user_global_ns, self.user_ns)\n",
-      "/Users/cmutel/Code/green_charging_emobility/Notebooks/import_clean_data.py:42: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  meter_2[\"Chargepoint\"][mask] = 42\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "meter = load_annotated_meter_data(DATA_DIR)"
+    "with warnings.catch_warnings():\n",
+    "    warnings.simplefilter(\"ignore\")\n",
+    "    meter = load_annotated_meter_data(DATA_DIR)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "767fa1b6",
+   "id": "b817fc6b",
    "metadata": {},
    "outputs": [
     {
@@ -265,28 +252,43 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "999a774b",
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "a3527c82",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "id                              int64\n",
+       "Chargepoint                    object\n",
+       "connector                      object\n",
+       "charge_log_id                  object\n",
+       "metervalue                      int64\n",
+       "increment                       int64\n",
+       "timestamp              datetime64[ns]\n",
+       "co2_intensity                 float64\n",
+       "co2_total                     float64\n",
+       "unique_charge_point            object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "TODO!!!"
+    "meter.dtypes"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fe21d220",
+   "id": "7d3c9047",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# replace NaN Chargpoints with unique number based on UUID of the connector\n",
-    "nans = mvs[mvs['Chargepoint'].isna()]\n",
-    "nan_cp_connectors = nans['connector'].unique()[1:]\n",
-    "newid = 10000\n",
-    "for connector in nan_cp_connectors:\n",
-    "    mvs.loc[mvs[\"connector\"] == connector, [\"Chargepoint\"]] = newid\n",
-    "    newid += 1"
-   ]
+   "source": []
   }
  ],
  "metadata": {
