Update template notebook with CO2 dataframe

--- a/Notebooks/Notebook template.ipynb
+++ b/Notebooks/Notebook template.ipynb
@@ -2,22 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "e46a433f",
+   "execution_count": 4,
+   "id": "6dd3238f",
    "metadata": {},
    "outputs": [],
    "source": [
     "from pathlib import Path\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from import_clean_data import load_annotated_meter_data\n",
+    "from import_clean_data import load_annotated_meter_data, load_co2_data\n",
     "import warnings"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "e45c9002",
+   "id": "92cb43c2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "84462e11",
+   "id": "ed3a0f15",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "b817fc6b",
+   "id": "d5324bbe",
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +254,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "a3527c82",
+   "id": "eb989d5e",
    "metadata": {},
    "outputs": [
     {
@@ -284,8 +284,369 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "id": "d133d97a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with warnings.catch_warnings():\n",
+    "    warnings.simplefilter(\"ignore\")\n",
+    "    co2 = load_co2_data(DATA_DIR)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "75e73b75",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>datetime</th>\n",
+       "      <th>co2_intensity</th>\n",
+       "      <th>co2_production</th>\n",
+       "      <th>co2_import</th>\n",
+       "      <th>nuclear</th>\n",
+       "      <th>geothermal</th>\n",
+       "      <th>biomass</th>\n",
+       "      <th>coal</th>\n",
+       "      <th>wind</th>\n",
+       "      <th>solar</th>\n",
+       "      <th>hydro</th>\n",
+       "      <th>gas</th>\n",
+       "      <th>oil</th>\n",
+       "      <th>unknown</th>\n",
+       "      <th>battery</th>\n",
+       "      <th>hydro</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2020-01-01 00:00:00+00:00</td>\n",
+       "      <td>115.53</td>\n",
+       "      <td>42.25</td>\n",
+       "      <td>239.46</td>\n",
+       "      <td>3321.21</td>\n",
+       "      <td>0.14</td>\n",
+       "      <td>235.03</td>\n",
+       "      <td>442.94</td>\n",
+       "      <td>445.71</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1034.33</td>\n",
+       "      <td>293.46</td>\n",
+       "      <td>18.54</td>\n",
+       "      <td>1038.76</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>181.97</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2020-01-01 01:00:00+00:00</td>\n",
+       "      <td>113.57</td>\n",
+       "      <td>46.79</td>\n",
+       "      <td>255.94</td>\n",
+       "      <td>3224.89</td>\n",
+       "      <td>0.14</td>\n",
+       "      <td>224.68</td>\n",
+       "      <td>432.04</td>\n",
+       "      <td>437.79</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1046.74</td>\n",
+       "      <td>245.34</td>\n",
+       "      <td>17.31</td>\n",
+       "      <td>1323.84</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>181.31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2020-01-01 02:00:00+00:00</td>\n",
+       "      <td>113.70</td>\n",
+       "      <td>30.13</td>\n",
+       "      <td>235.80</td>\n",
+       "      <td>3671.14</td>\n",
+       "      <td>3.17</td>\n",
+       "      <td>252.13</td>\n",
+       "      <td>471.63</td>\n",
+       "      <td>472.28</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>1107.86</td>\n",
+       "      <td>306.60</td>\n",
+       "      <td>20.47</td>\n",
+       "      <td>586.79</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>81.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2020-01-01 03:00:00+00:00</td>\n",
+       "      <td>110.52</td>\n",
+       "      <td>48.75</td>\n",
+       "      <td>231.63</td>\n",
+       "      <td>3638.54</td>\n",
+       "      <td>9.61</td>\n",
+       "      <td>206.78</td>\n",
+       "      <td>376.36</td>\n",
+       "      <td>365.74</td>\n",
+       "      <td>0.02</td>\n",
+       "      <td>1036.09</td>\n",
+       "      <td>323.40</td>\n",
+       "      <td>17.47</td>\n",
+       "      <td>1510.04</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>97.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2020-01-01 04:00:00+00:00</td>\n",
+       "      <td>111.10</td>\n",
+       "      <td>41.83</td>\n",
+       "      <td>240.52</td>\n",
+       "      <td>3571.64</td>\n",
+       "      <td>5.70</td>\n",
+       "      <td>222.40</td>\n",
+       "      <td>411.97</td>\n",
+       "      <td>397.42</td>\n",
+       "      <td>0.02</td>\n",
+       "      <td>1041.85</td>\n",
+       "      <td>290.49</td>\n",
+       "      <td>18.23</td>\n",
+       "      <td>1123.35</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>97.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13123</th>\n",
+       "      <td>2021-06-30 19:00:00+00:00</td>\n",
+       "      <td>74.55</td>\n",
+       "      <td>71.97</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>918.46</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1812.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>2405.48</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1064.06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13124</th>\n",
+       "      <td>2021-06-30 20:00:00+00:00</td>\n",
+       "      <td>78.65</td>\n",
+       "      <td>77.04</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>943.88</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1715.01</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>2823.69</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1052.42</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13125</th>\n",
+       "      <td>2021-06-30 21:00:00+00:00</td>\n",
+       "      <td>103.10</td>\n",
+       "      <td>71.17</td>\n",
+       "      <td>348.64</td>\n",
+       "      <td>1061.13</td>\n",
+       "      <td>0.22</td>\n",
+       "      <td>52.81</td>\n",
+       "      <td>184.39</td>\n",
+       "      <td>128.09</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1456.45</td>\n",
+       "      <td>83.60</td>\n",
+       "      <td>4.48</td>\n",
+       "      <td>2066.78</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>692.06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13126</th>\n",
+       "      <td>2021-06-30 22:00:00+00:00</td>\n",
+       "      <td>120.71</td>\n",
+       "      <td>82.12</td>\n",
+       "      <td>342.61</td>\n",
+       "      <td>1215.24</td>\n",
+       "      <td>0.34</td>\n",
+       "      <td>76.70</td>\n",
+       "      <td>251.02</td>\n",
+       "      <td>193.26</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>967.38</td>\n",
+       "      <td>95.31</td>\n",
+       "      <td>6.64</td>\n",
+       "      <td>2635.87</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>198.25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13127</th>\n",
+       "      <td>2021-06-30 23:00:00+00:00</td>\n",
+       "      <td>120.51</td>\n",
+       "      <td>83.40</td>\n",
+       "      <td>287.08</td>\n",
+       "      <td>1267.46</td>\n",
+       "      <td>0.36</td>\n",
+       "      <td>84.33</td>\n",
+       "      <td>257.64</td>\n",
+       "      <td>226.13</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>900.87</td>\n",
+       "      <td>77.95</td>\n",
+       "      <td>7.24</td>\n",
+       "      <td>2564.85</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>117.16</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>13128 rows × 16 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                       datetime  co2_intensity  co2_production  co2_import  \\\n",
+       "0     2020-01-01 00:00:00+00:00         115.53           42.25      239.46   \n",
+       "1     2020-01-01 01:00:00+00:00         113.57           46.79      255.94   \n",
+       "2     2020-01-01 02:00:00+00:00         113.70           30.13      235.80   \n",
+       "3     2020-01-01 03:00:00+00:00         110.52           48.75      231.63   \n",
+       "4     2020-01-01 04:00:00+00:00         111.10           41.83      240.52   \n",
+       "...                         ...            ...             ...         ...   \n",
+       "13123 2021-06-30 19:00:00+00:00          74.55           71.97         NaN   \n",
+       "13124 2021-06-30 20:00:00+00:00          78.65           77.04         NaN   \n",
+       "13125 2021-06-30 21:00:00+00:00         103.10           71.17      348.64   \n",
+       "13126 2021-06-30 22:00:00+00:00         120.71           82.12      342.61   \n",
+       "13127 2021-06-30 23:00:00+00:00         120.51           83.40      287.08   \n",
+       "\n",
+       "       nuclear  geothermal  biomass    coal    wind  solar    hydro     gas  \\\n",
+       "0      3321.21        0.14   235.03  442.94  445.71   0.00  1034.33  293.46   \n",
+       "1      3224.89        0.14   224.68  432.04  437.79   0.00  1046.74  245.34   \n",
+       "2      3671.14        3.17   252.13  471.63  472.28   0.01  1107.86  306.60   \n",
+       "3      3638.54        9.61   206.78  376.36  365.74   0.02  1036.09  323.40   \n",
+       "4      3571.64        5.70   222.40  411.97  397.42   0.02  1041.85  290.49   \n",
+       "...        ...         ...      ...     ...     ...    ...      ...     ...   \n",
+       "13123   918.46        0.00     0.00    0.00    0.00   0.00  1812.00    0.00   \n",
+       "13124   943.88        0.00     0.00    0.00    0.00   0.00  1715.01    0.00   \n",
+       "13125  1061.13        0.22    52.81  184.39  128.09   0.00  1456.45   83.60   \n",
+       "13126  1215.24        0.34    76.70  251.02  193.26   0.01   967.38   95.31   \n",
+       "13127  1267.46        0.36    84.33  257.64  226.13   0.01   900.87   77.95   \n",
+       "\n",
+       "         oil  unknown  battery    hydro  \n",
+       "0      18.54  1038.76      0.0   181.97  \n",
+       "1      17.31  1323.84      0.0   181.31  \n",
+       "2      20.47   586.79      0.0    81.00  \n",
+       "3      17.47  1510.04      0.0    97.00  \n",
+       "4      18.23  1123.35      0.0    97.00  \n",
+       "...      ...      ...      ...      ...  \n",
+       "13123   0.00  2405.48      0.0  1064.06  \n",
+       "13124   0.00  2823.69      0.0  1052.42  \n",
+       "13125   4.48  2066.78      0.0   692.06  \n",
+       "13126   6.64  2635.87      0.0   198.25  \n",
+       "13127   7.24  2564.85      0.0   117.16  \n",
+       "\n",
+       "[13128 rows x 16 columns]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "co2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "6f68e05a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "datetime          datetime64[ns, UTC]\n",
+       "co2_intensity                 float64\n",
+       "co2_production                float64\n",
+       "co2_import                    float64\n",
+       "nuclear                       float64\n",
+       "geothermal                    float64\n",
+       "biomass                       float64\n",
+       "coal                          float64\n",
+       "wind                          float64\n",
+       "solar                         float64\n",
+       "hydro                         float64\n",
+       "gas                           float64\n",
+       "oil                           float64\n",
+       "unknown                       float64\n",
+       "battery                       float64\n",
+       "hydro                         float64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "co2.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "7d3c9047",
+   "id": "65a2f65c",
    "metadata": {},
    "outputs": [],
    "source": []
